--- a/views/recipientLogin/recipientSignUp2_upload.ejs
+++ b/views/recipientLogin/recipientSignUp2_upload.ejs
@@ -15,7 +15,7 @@
 
 <div class="container" style="min-height: 70%; width:40%">
     <div class="row">
-        <h2 class="form-signin-heading text-center" style="padding-bottom: 2%">Design Your Page - Add Image</h2>
+        <h2 class="form-signin-heading text-center" style="padding-bottom: 2%">Step 2. Add Your Image</h2>
     </div>
     <p for="recipientProfileInput" class="">You haven't finished your page yet.<strong> Please upload your page picture below.</strong></p>
     <form action="/services/recipient/profilePictureUpload" id="profileIconUploadForm" method="post" enctype="multipart/form-data" onsubmit="return checkImageSize(1024)">
