--- a/views/charity/listCharities.ejs
+++ b/views/charity/listCharities.ejs
@@ -24,13 +24,13 @@
                     <li class="sidebar-offcanvas" style="font-style: italic; font-size: 40px; padding-bottom: 10%" >
                         <strong>Search Charities</strong></li>
                     <li  >
-                        <a href="/charity/searchCharities" style="color: #000000;">Search Charities</a>
+                        <a href="/charities/searchCharities" style="color: #000000;">Search Charities</a>
                     </li>
                     <li>
-                        <a href="/charity/listCharities" style="color: #000000;"><strong>List A-Z</strong></a>
+                        <a href="/charities/listCharities" style="color: #000000;"><strong>List A-Z</strong></a>
                     </li>
                     <li>
-                        <a href="/charity/hotCharities" style="color: #000000;">Recommended</a>
+                        <a href="/charities/hotCharities" style="color: #000000;">Recommended</a>
                     </li>
                 </ul>
             </div>
