--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -4,102 +4,19 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Will Give payment
         <form action=""></form></title>
-
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.8.1/jquery.validate.min.js"></script>
+    <script src="/jquery/dist/jquery.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/jquery-validation/dist/jquery.validate.js"></script>
     <script type="text/javascript" src="https://js.stripe.com/v1/"></script>
-    <script type="text/javascript">
-        Stripe.setPublishableKey('pk_test_iJPmMQMGarAHRE7oUcM5iBxO');
-        $(document).ready(function() {
-            function addInputNames() {
-                // Not ideal, but jQuery's validate plugin requires fields to have names
-                // so we add them at the last possible minute, in case any javascript
-                // exceptions have caused other parts of the script to fail.
-                $(".card-number").attr("name", "card-number")
-                $(".card-cvc").attr("name", "card-cvc")
-                $(".card-expiry-year").attr("name", "card-expiry-year")
-            }
+    <script src="https://checkout.stripe.com/v2/checkout.js"></script>
 
-            function removeInputNames() {
-                $(".card-number").removeAttr("name")
-                $(".card-cvc").removeAttr("name")
-                $(".card-expiry-year").removeAttr("name")
-            }
-
-            function submit(form) {
-                // remove the input field names for security
-                // we do this *before* anything else which might throw an exception
-                removeInputNames(); // THIS IS IMPORTANT!
-
-                // given a valid form, submit the payment details to stripe
-                $(form['submit-button']).attr("disabled", "disabled")
-
-                Stripe.createToken({
-                    number: $('.card-number').val(),
-                    cvc: $('.card-cvc').val(),
-                    exp_month: $('.card-expiry-month').val(),
-                    exp_year: $('.card-expiry-year').val()
-                }, function(status, response) {
-                    if (response.error) {
-                        // re-enable the submit button
-                        $(form['submit-button']).removeAttr("disabled")
-
-                        // show the error
-                        $(".payment-errors").html(response.error.message);
-
-                        // we add these names back in so we can revalidate properly
-                        addInputNames();
-                    } else {
-                        // token contains id, last4, and card type
-                        var token = response['id'];
-
-                        // insert the stripe token
-                        var input = $("<input name='stripeToken' value='" + token + "' style='display:none;' />");
-                        form.appendChild(input[0])
-
-                        // and submit
-                        form.submit();
-                    }
-                });
-
-                return false;
-            }
-
-            // add custom rules for credit card validating
-            jQuery.validator.addMethod("cardNumber", Stripe.validateCardNumber, "Please enter a valid card number");
-            jQuery.validator.addMethod("cardCVC", Stripe.validateCVC, "Please enter a valid security code");
-            jQuery.validator.addMethod("cardExpiry", function() {
-                return Stripe.validateExpiry($(".card-expiry-month").val(),
-                        $(".card-expiry-year").val())
-            }, "Please enter a valid expiration");
-
-            // We use the jQuery validate plugin to validate required params on submit
-            $("#example-form").validate({
-                submitHandler: submit,
-                rules: {
-                    "card-cvc" : {
-                        cardCVC: true,
-                        required: true
-                    },
-                    "card-number" : {
-                        cardNumber: true,
-                        required: true
-                    },
-                    "card-expiry-year" : "cardExpiry" // we don't validate month separately
-                }
-            });
-
-            // adding the input field names is the last step, in case an earlier step errors
-            addInputNames();
-        });
-    </script>
 </head>
 <body>
 
 <h1>Will Give payment Portal</h1>
 
 
-<form action="/" method="post" id="example-form" style="display: none;">
+<form action="javascript:void(0);" method="post" id="example-form" style="display: block;">
 
 
     <div class="form-row">
@@ -107,108 +24,82 @@
         <input id="paymentAmount" type="text" maxlength="20" autocomplete="off" class="required" />
     </div>
 
+    <input id="amount" type="hidden" autocomplete="off" name="amount" value="300">
+
     <button type="submit" name="submit-button" onClick="enableCheckout()">Submit</button>
 
 
 </form>
 
+<script>
+function enableCheckout() {
+
+        document.getElementById("customButton").style.display="block";
+        alert("Please confirm you will pay the following amount: "+ jQuery("#paymentAmount").val());
+        jQuery('#amount').val(jQuery("#paymentAmount").val());
+        alert("Set amount: "+ jQuery("#amount").val());
+        }
+
+</script>
+
+<script src="https://checkout.stripe.com/v2/checkout.js"></script>
+
+
+<form id="form" action="/payment/stripePayment" method="POST" style="display:none;">
+    <input id="amount" type="hidden" autocomplete="off" name="amount" value="200">
+
+</form>
+
+<button id="customButton" style="display:none;">Purchase</button>
 
 <script>
 
-function enableCheckout() {
+    $('#customButton').click(function(){
+        var token = function(res){
+            var $input = $('<input type=hidden name=stripeToken />').val(res.id);
+            $('form').append($input).submit();
+        };
 
-   document.getElementById("paymentButton").style.display="block";
+        StripeCheckout.open({
+            key:         'pk_test_iJPmMQMGarAHRE7oUcM5iBxO',
+            address:     true,
+            amount:      5000,
+            currency:    'usd',
+            name:        'Joes Pistachios',
+            description: 'A bag of Pistachios',
+            panelLabel:  'Checkout',
+            token:       token
+        });
 
-   alert("Please confirm you will pay the following amount: "+ document.getElementById("paymentAmount").value);
-   document.getElementById("amount").value = document.getElementById("paymentAmount").value;
-
-}
-
-function getValue() {
-
-
-}
-
+        return false;
+    });
 </script>
 
 
 <!--
 
-<form action="/" method="post" id="example-form" style="display: none;">
+    jQuery('#customButton').on('click', function (e) {
+        // Open Checkout with further options
 
-    <div class="form-row">
-        <label for="name" class="stripeLabel">Your Name</label>
-        <input type="text" name="name" class="required" />
-    </div>
+        var payAmount=  jQuery('#amount').val();
 
-    <div class="form-row">
-        <label for="email">E-mail Address</label>
-        <input type="text" name="email" class="required" />
-    </div>
+        alert("paymentAmount now: "+ jQuery("#amount").val());
+        handler.open({
+            name: 'Payment widget',
+            description: 'Pay ($'+payAmount+ ')' ,
+            amount: payAmount
+        });
+        e.preventDefault();
+    });
 
-    <div class="form-row">
-        <label>Card Number</label>
-        <input type="text" maxlength="20" autocomplete="off" class="card-number stripe-sensitive required" />
-    </div>
 
-    <div class="form-row">
-        <label>CVC</label>
-        <input type="text" maxlength="4" autocomplete="off" class="card-cvc stripe-sensitive required" />
-    </div>
-
-    <div class="form-row">
-        <label>Expiration</label>
-        <div class="expiry-wrapper">
-            <select class="card-expiry-month stripe-sensitive required">
-            </select>
-            <script type="text/javascript">
-                var select = $(".card-expiry-month"),
-                        month = new Date().getMonth() + 1;
-                for (var i = 1; i <= 12; i++) {
-                    select.append($("<option value='"+i+"' "+(month === i ? "selected" : "")+">"+i+"</option>"))
-                }
-            </script>
-            <span> / </span>
-            <select class="card-expiry-year stripe-sensitive required"></select>
-            <script type="text/javascript">
-                var select = $(".card-expiry-year"),
-                        year = new Date().getFullYear();
-
-                for (var i = 0; i < 12; i++) {
-                    select.append($("<option value='"+(i + year)+"' "+(i === 0 ? "selected" : "")+">"+(i + year)+"</option>"))
-                }
-            </script>
-        </div>
-    </div>
-
-    <button type="submit" name="submit-button">Submit</button>
-    <span class="payment-errors"></span>
-</form>
 
 -->
 
-<!--
-    The easiest way to indicate that the form requires JavaScript is to show
-    the form with JavaScript (otherwise it will not render). You can add a
-    helpful message in a noscript to indicate that users should enable JS.
--->
-<script>if (window.Stripe) $("#example-form").show()</script>
-<noscript><p>JavaScript is required for the registration form.</p></noscript>
-<form id="paymentButton" action="/payment/stripePayment" method="POST" style="display:none;">
-    <input id="amount" type="hidden" autocomplete="off" name="amount" value="200"></input>
-    <input type="hidden" autocomplete="off" name="currency" value="usd"></input>
-    <input type="hidden" autocomplete="off" name="orderId" value="aaaaaaaa"></input>
 
-    <script
-            src="https://checkout.stripe.com/checkout.js"
-            class="stripe-button"
-            data-key="pk_test_iJPmMQMGarAHRE7oUcM5iBxO"
-            data-image="/square-image.png"
-            data-name="Payment Widget"
-            data-description="Pay the following amount"
-            data-amount="2000">
-    </script>
-</form>
+
+
+
 </body>
 <%include layout/footer.ejs%>
 
